# FTPServer

./: .gitignore  .gitmodules  CMakeLists.txt
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
proto/include/: ClientMessage_generated.h  ServerMessages_generated.h
proto/schema/: ClientMessage.fbs  ServerMessages.fbs
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
utils/: md5_checksum.hpp  streams.hpp  zmq.hpp
utils/socket/: socket.cpp  socket.hpp
